Build: use jlink to create a custom jre to reduce embedded jre size
git-svn-id: https://svn.code.sf.net/p/davmail/code/trunk@3525 3d1905a2-6b24-0410-a738-b14d5a86fcbd