@@ -424,7 +424,7 @@
                 <exclude name="lib/hamcrest-core-*.jar"/>
             </fileset>
         </zip>
-        <antcall target="download-jre"/>
+        <antcall target="download-build-jre"/>
         <zip file="dist/davmail-${release-name}-windows-standalone.zip">
             <fileset dir="dist">
                 <include name="jre/**"/>
@@ -567,6 +567,30 @@
             <cutdirsmapper dirs="1"/>
         </unzip>
         <delete file="dist/jrefx.zip"/>
+    </target>
+
+    <target name="download-build-jre">
+        <mkdir dir="dist"/>
+        <get src="https://api.azul.com/zulu/download/community/v1.0/bundles/latest/binary/?jdk_version=15&amp;ext=zip&amp;os=windows&amp;arch=x86&amp;hw_bitness=64&amp;bundle_type=jdk&amp;features=fx"
+             dest="dist/jdkfx.zip"
+        />
+        <unzip src="dist/jdkfx.zip" dest="dist/jdk">
+            <cutdirsmapper dirs="1"/>
+        </unzip>
+        <delete file="dist/jdkfx.zip"/>
+
+        <echo message="Create custom jre"/>
+        <delete dir="dist/jre"/>
+        <exec dir="." executable="dist/jdk/bin/jlink.exe">
+            <arg value="--add-modules"/>
+            <arg value="java.base,java.datatransfer,java.desktop,java.naming,java.security.jgss,java.security.sasl,java.xml,javafx.base,javafx.controls,javafx.graphics,javafx.swing,javafx.web"/>
+            <arg value="--output"/>
+            <arg value="dist/jre"/>
+            <arg value="--strip-debug"/>
+            <arg value="--no-man-pages"/>
+            <arg value="--no-header-files"/>
+        </exec>
+        <delete dir="dist/jdk"/>
     </target>
 
 </project>
